# taskmaster

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.md  backlog-viewer.html  backlog_server.py  blast_radius.py  merge_gate_decide.py  merge_recorder_stamp.py  project.py  pyproject.toml  taskmaster_v3.py
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
commands/: check-todos.md  end-session.md  init-taskmaster.md  pick-task.md  review-gate.md  spec-review.md  start-session.md  taskmaster-open-dashboard.md
docs/: SMOKE_TEST_2.0.0.md  SMOKE_TEST_3.0.0.md  TASKMASTER.md  capability-matrix.md  competitive-analysis-2026-03.md  design-v2.md  design-v3-agent-teams.md  design-v3-narrative-continuity.md  taskmaster-redesign.html  v3-skills-enrichment.md
evals/: trigger-eval.json
hooks/: hooks.json  merge-gate.sh  merge-recorder.sh  merge_gate.py  merge_gate_decide.py  merge_recorder.py  merge_recorder_stamp.py  run_hook.sh  session-start.sh  snapshot.py  taskmaster-merge-approve.sh  taskmaster_merge_approve.py  worktree-submodule-init.sh  worktree_submodule_init.py
playbooks/: CONVENTIONS.md
references/: task-lifecycle.md
scripts/: backfill_tldr.py  check_adapter_coverage.py  migrate_handover_statuses.py  migrate_links.py
specs/: 2026-07-13-handover-threads-design.md
taskmaster/: backlog_server.py  blast_radius.py  taskmaster_v3.py
taskmaster.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  skill_budget_helper.py  test_adapter_coverage.py  test_add_idea_skill_lint.py  test_api_handover_status.py  test_api_notes.py  test_areas.py  (+184 more)
(+424 files in other folders)
