[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmaster"
version = "3.24.1"
description = "Task/backlog management MCP server with narrative continuity (handovers, lessons, issues, decisions, recap)"
requires-python = ">=3.11"
dependencies = ["fastmcp", "pyyaml"]

[tool.setuptools.packages.find]
include = ["taskmaster*"]
